# astc-encoder-clone-Themaister

Source/: CMakeLists.txt  astc_codec_internals.h  astc_toplevel.cpp  astc_weight_align.cpp  mathlib.cpp  mathlib.h  softfloat.cpp
